added background to stylesheet

--- a/delegates/public/stylesheets/style.css
+++ b/delegates/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body{
 {
   width:100%;
   margin:0 auto;
-  background:#e798bf;
+  background-image: url('../images/background1.jpg');
   display:flex;
   display:-webkit-flex;
   justify-content:center;
