--- a/delegates/views/index.ejs
+++ b/delegates/views/index.ejs
@@ -79,8 +79,8 @@
     <select name="day" id="day" class="form-select" aria-label="Default select example">
       <option selected>Choose interview day</option>
       <!-- <option name="day" id="day" value="Sunday 9/5" required>Sunday 9/5</option> -->
-      <option name="day" id="day" value="Monday 10/5" required>Monday 10/5</option>
-      <option name="day" id="day" value="Tuesday 11/5" required>Tuesday 11/5</option>
+      <!-- <option name="day" id="day" value="Monday 10/5" required>Monday 10/5</option> -->
+      <!-- <option name="day" id="day" value="Tuesday 11/5" required>Tuesday 11/5</option> -->
       <option name="day" id="day" value="Wednesday 12/5" required>Wednesday 12/5</option>
       <option name="day" id="day" value="Thursday 13/5" required>Thursday 13/5</option>
       <option name="day" id="day" value="Friday 14/5" required>Friday 14/5</option>
